# FlashX_RecipeTools

./: .gitignore  LICENSE  README.md  pyproject.toml
OpSpecGenerator/: generate_datapacket_json.py  generate_op_spec.py  milhoja_block_constants.py
docs/: users_guide.rst
examples/generate_spark_hydro/: README.md  _spark_nodes.py  genSparkHydro.py
examples/generate_spark_hydro/cg-tpl/: cg-tpl.Hydro.F90  cg-tpl.amrex_communicateFluxes.F90  cg-tpl.do_blocks.json  cg-tpl.do_blocks2.json  cg-tpl.do_blocks_level.json  cg-tpl.do_levels.json  cg-tpl.do_stages.json  cg-tpl.pm4_communicateFluxes.F90
src/FlashX_RecipeTools/: __init__.py  builder.py  constants.py  controllers.py  nodes.py  recipe_builder.py
src/FlashX_RecipeTools/OperationRecipe/: OperationRecipe.py  __init__.py  _controllers.py
src/FlashX_RecipeTools/OperationRecipe/_internal_tpl/: cg-tpl.concurrent_work.json  cg-tpl.tileLoop.json
src/FlashX_RecipeTools/TimeStepRecipe/: TimeStepIR.py  TimeStepRecipe.py  __init__.py  _controller.py  _controller_ta.py  compile_recipe.py  construct_partial_tf_spec.py  generate_taskfunction_codes.py
src/FlashX_RecipeTools/TimeStepRecipe/_internal_tpl/: cg-tpl.TaskfunctionElement.json  cg-tpl.TimeAdvance.F90  cg-tpl.execute_Milhoja_CpuOnly.json  cg-tpl.execute_Milhoja_pushTile_CpuGpu.json  cg-tpl.execute_Milhoja_pushTile_CpuGpuSplit.json  cg-tpl.execute_Milhoja_pushTile_CpuOnly.json  cg-tpl.execute_Milhoja_pushTile_ExtCpuGpuSplit.json  cg-tpl.execute_Milhoja_pushTile_ExtGpu.json  cg-tpl.execute_Milhoja_pushTile_GpuOnly.json  cg-tpl.fluxCorrection.F90  cg-tpl.guardcell_fill.F90  cg-tpl.support_Eos.F90
src/FlashX_RecipeTools/_internal_tpl/: cg-tpl.subGraph.json  cg-tpl.work.json
src/FlashX_RecipeTools/opspec/: __init__.py  _controller.py  _load.py  _preprocessor.py
src/FlashX_RecipeTools/utils/: MakefileParser.py  OperationSpec.py  TaskfunctionTemplateGenerator.py  __init__.py  c_header_to_fypp.py  generate_op_spec.py  milhoja_block_constants.py
tests/: _spark_nodes.py  conftest.py  genSparkHydro.py
tests/TestHeader2Dict/: Simulation.h  testheader2dict.py
tests/TestOpSpecGenerator/: Hydro_interface.F90  test_generate_op_spec.py
tests/TestOpSpecGenerator/ref/: Hydro_interface_ref.json
tests/TestOperationSpec/: Hydro_op1_2D.json  Hydro_spark_allLevels.json  Hydro_spark_perLevels.json  Simulation.fypp.save  Spark.fypp  constants.fypp  test_preprocessor.py
tests/TestTimeStepRecipe/: Config  Hydro_interface.F90  Hydro_op1_2D.json  Makefile.h  Simulation.fypp  Simulation.h  check.json  recipe.py  setup_operationSpecs  test_spark_hydro.py
tests/TestTimeStepRecipe/ref/: DataPacket_gpu_taskfn_0.cxx  DataPacket_gpu_taskfn_0.h  DataPacket_gpu_taskfn_0_mod.F90  gpu_taskfn_0.cxx  gpu_taskfn_0_C2F.F90  gpu_taskfn_0_mod.F90
tests/cg-tpl/: cg-tpl.do_blocks_level.json  cg-tpl.do_stages.json  cg-tpl.if_levGTone.json  cg-tpl.if_levLTmax.json  cg-tpl.nontele_saveSoln.F90
tests/generate_simpleunsplit_TFspec/: Hydro_op1.json  _nodes.py  recipe.py  ref_tf_hydro.json  test.py  tf_spec_tpl.json
tests/generate_spark_hydro/: _spark_nodes.py  genSparkHydro.py
tests/generate_spark_hydro/cg-tpl/: cg-tpl.Hydro.F90  cg-tpl.Hydro_fluxCorrect.F90  cg-tpl.Hydro_saveFluxBuff.F90  cg-tpl.do_blocks.json  cg-tpl.do_blocks2.json
