[project]
name =  "FlashX_RecipeTools"
authors = [
    {name = "Youngjun Lee", email = "leey@anl.gov"},
    {name = "Jared O’Neal", email = "joneal@anl.gov"},
    {name = "Johann Rudi", email = "work@johannrudi.com"},
    {name = "Wesley Kwiecinski", email = "wkwiecinski@anl.gov"},
]
description = "Recipe Tools for Flash-X"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
]
requires-python = ">=3.9"
dependencies = [
    "loguru",
    """Code-Generation-Toolkit
    @git+ssh://git@github.com/ylee88/cg-kit.git""",
    """milhoja
    @git+ssh://git@git.cels.anl.gov/joneal/OrchestrationRuntime.git
    @402fc8f5404d0d8c389195ce51d9326b9ece5969
    #subdirectory=tools/milhoja_pypkg""",
]
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://flash-x.org"

[tool.black]
line-length = 120
fast = true

[tool.ruff]
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

