[project]
name =  "FlashX_RecipeTools"
authors = [
    {name = "Youngjun Lee", email = "leey@anl.gov"},
    {name = "Jared O’Neal", email = "joneal@anl.gov"},
    {name = "Johann Rudi", email = "work@johannrudi.com"},
    {name = "Wesley Kwiecinski", email = "wkwiecinski@anl.gov"},
    {name = "Klaus Weide", email = "kweide@uchicago.edu"},
]
description = "Recipe Tools for Flash-X"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
]
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "mako",
    "code-generation-toolkit",
    "fparser",
    """milhoja@git+ssh://git@github.com/Flash-X/Milhoja.git@32976c05309ea8f348bae28fc44d9d6011364c00 055a7a921525a8625fd96cbca6dccbecc3648ea3#subdirectory=tools/milhoja_pypkg""",
]
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://flash-x.org"

[tool.black]
line-length = 120
fast = true

[tool.ruff]
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

